remove width on product img casuing layout bug

--- a/app/globals.css
+++ b/app/globals.css
@@ -187,7 +187,7 @@ a {
 
 .product-img {
   height: auto;
-  width: 100%;
+  /* width: 100%; */
 }
 .product-card {
   max-width: 300px;
